# pkg/models/auth.go
@@ -1,0 +1,6 @@
+package models
+
+type AuthLoginResponse struct {
+	Token    string `json:"token"`
+	FullName string `json:"full_name"`
+}
